# CMake

./: .gitignore  README.md
CMAKE_Eigen3_example/: CMakeLists.txt  README.md
CMake_HDF5_example/: CMakeLists.txt  README.md
CMake_HDF5_example/src/: writedata.cpp
CMake_MPI_example/: CMakeLists.txt  README.md
CMake_MPI_example/src/: helloMPI.cpp
CMake_OpenMP_example/: CMakeLists.txt  README.md
CMake_OpenMP_example/src/: helloOMP.cpp
